--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -24,5 +24,5 @@ jobs:
       run: |
         cd ./python
         echo "${{ secrets.Docker_hub_pass }}" | docker login -u aiwl --password-stdin
-        docker image build -t [your dockerhub username here]/gitops:hellov1.0 .
-        docker push [your docker hub username here]/gitops:hellov1.0
+        docker image build -t aiwl/gitops:hellov1.0 .
+        docker push aiwl/gitops:hellov1.0
